19595: FIX page menu dropdowns hidden
Fix page menu dropdowns hidden behind sticky table headers.

BETA-118

--- a/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
@@ -37,7 +37,7 @@ div.success {
 div#top_heading {
   width: 100%;
   padding: 0;
-  z-index: +1;
+  z-index: $sticky-table-header-z-index + 1;
 
   div.titlebar {
     display: flex;
